fix(Layout): optimize fixed and collapse sider

--- a/themes/common/layout.less
+++ b/themes/common/layout.less
@@ -47,6 +47,11 @@
       z-index: 2;
     }
   }
+
+  &&-sider-fixed&-sider-collapsed {
+    padding-left: @layout-sider-collapse-width;
+  }
+  
   &&-sider-collapsed {
     > .@{sider-prefix} {
       width: @layout-sider-collapse-width;
